home-screen-UI-changes

--- a/src/app/header/menu-bar/menu-bar.component.html
+++ b/src/app/header/menu-bar/menu-bar.component.html
@@ -1,4 +1,6 @@
-<p-menubar [model]="menuItems">
-    <input type="text" pInputText placeholder="task id">
-    <button pButton label="Search" icon="pi pi-search"></button>
-</p-menubar>
+<div class="menubar">
+    <p-menubar [model]="menuItems">
+        <input type="text" pInputText placeholder="task id">
+        <button pButton label="Search" icon="pi pi-search"></button>
+    </p-menubar>
+</div>
