--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,22 @@
-
+<!-- 
 <label > Wells Fargo Logo</label>
-<label style="float:right">Logged in user info & Log Out button</label>
+<label style="float:right">Logged in user info & Log Out button</label> -->
+<div class="col-md-12 no-pad">
+    <div class="main-header">
+        WELLS FARGO
+        <span class="fa fa-angle-down down-icon"></span>
+        <span class="login-name">Priyanka Pawar</span>
+        <span class="fa fa-user user-icon"></span>
+        <span class="fa fa-question-circle question-icon"></span>
+        <!-- <span class="seprator-line"></span> -->
+       
+        
+    </div>
+    <div class="content-panel">
+    <div class="task-header">Tasks Management</div>
+    </div>
+</div>
+
 <app-menu-bar></app-menu-bar>
 <router-outlet></router-outlet>
 <!-- Footer component will be here-->
