--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,4 @@
-<!-- 
-<label > Wells Fargo Logo</label>
-<label style="float:right">Logged in user info & Log Out button</label> -->
+<!-- headerfile -->
 <div class="col-md-12 no-pad">
     <div class="main-header">
         WELLS FARGO
