--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -92,7 +92,8 @@
              <span class="task-label-last">over the last : </span>
              <span><p-dropdown [options]="cities3" [(ngModel)]="selectedCity3"></p-dropdown></span>
              <div style="padding-top: 12px;">
-                <p-table [value]="cars">
+              <tmt-task-list></tmt-task-list>
+                <!-- <p-table [value]="cars">
                   <ng-template pTemplate="header">
                       <tr>
                           <th>ID</th>
@@ -113,7 +114,7 @@
                           <td>xyz</td>
                       </tr>
                   </ng-template>
-              </p-table>
+              </p-table> -->
               </div>
              </div>
              </div>
