Refactoring of home page

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,6 @@
     </div>
 </div>
 
-<app-menu-bar></app-menu-bar>
+<tmt-menu-bar></tmt-menu-bar>
 <router-outlet></router-outlet>
 <!-- Footer component will be here-->
