UI changes for menu bar on dashboarr

--- a/src/app/header/menu-bar/menu-bar.component.scss
+++ b/src/app/header/menu-bar/menu-bar.component.scss
@@ -1,41 +1,94 @@
-::ng-deep .menubar{
+
+::ng-deep.menubar{
     margin-bottom: 14px;
     padding-left: 14px;
     padding-right: 14px;
     p-menubar{
-        div.ui-menubar{
-            p-menubarsub{
+        .ui-menubar{
+            background-color: #e4ddcb;
                 ul.ui-menubar-root-list{
-                    li.ui-menuitem.ui-menuitem-active{
-                       &.ui-menuitem.ui-menuitem-active:focus{
-                        border: none;
-                       }
-                       &.ui-menuitem.ui-menuitem-active.ui-menuitem-link-active:focus{
-                        border: none;
-                       }
-                        a.ui-menuitem-link.ui-menuitem-link-active{
-                            background-color: #613c1f;
-                            border: none;
-                            &.ui-menuitem-link:focus{
+                    li.ui-menuitem{
+                        .ui-menuitem-link{
+                            border-right: 1px solid #c4bdbd;
+                            .ui-menuitem-text{
+                                color: black;
+                                font-weight: bold;
+                                white-space: nowrap;
+                            }
+                            .ui-submenu-icon.pi.pi-fw.pi-caret-down{
+                                opacity: 0;
+                                }
+                        }
+                        p-menubarsub.ui-submenu{
+                            ul.ui-submenu-list{
+                                li.ui-menuitem.ui-menuitem-active{
+                                    .ui-menuitem-link{
+                                        background-color: lightgray;
+                                        .ui-menuitem-icon{
+                                            color: black;
+                                        }
+                                        .ui-menuitem-text{
+                                            color: black;
+                                            font-weight: bold;
+                                            white-space: nowrap;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        &.ui-menuitem-active{
+                            .ui-menuitem-link{
+                                background-color: #613c1f;;
+                                .ui-menuitem-icon{
+                                    color: white;
+                                }
+                                .ui-menuitem-text{
+                                    color: white;
+                                    font-weight: bold;
+                                    white-space: nowrap;
+                                }
+                                .ui-submenu-icon.pi.pi-fw.pi-caret-right{
+                                    opacity: 0;
+                                }
+                            }
+                            .ui-menuitem-link:focus{
+                                border: none;
                                 box-shadow: none;
-                            }
-                            &.ui-menuitem-link:hover{
-                                background-color: #613c1f;
-                            }
-                            span.ui-menuitem-icon {
-                                color: white;
-                            }
-                            span.ui-menuitem-text{
-                                color: white;
                             }
                         }
                     }
                 }
+            .ui-menuitem-link.ui-menuitem-link-active {
+                .ui-menuitem-icon{
+                    color: black;
+                }
+                .ui-menuitem-text{
+                    color: black;
+                    font-weight: bold;
+                    white-space: nowrap;
+                }
+            }
+            .ui-menuitem-link:focus{
+                border: none;
+                box-shadow: none;
             }
         }
     }
-} 
-
-::ng-deep .ui-menubar .ui-menubar-root-list > .ui-menuitem > .ui-menuitem-link:focus {
-    border: none !important;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
