--- a/src/app/home/task/task.component.html
+++ b/src/app/home/task/task.component.html
@@ -11,6 +11,10 @@
     <span>
       <p-dropdown [options]="cities3" [(ngModel)]="selectedCity3"></p-dropdown>
     </span>
+    <div style="float: right;">
+      <span class="fa fa-download pdf-excel-icon"><span class="pdf-excel-icon">PDF</span></span>
+      <span class="fa fa-download"><span class="pdf-excel-icon">Excel</span></span>
+    </div>
     <div style="padding-top: 12px;">
       <tmt-my-task-list></tmt-my-task-list>
     </div>
