--- a/src/app/home/task/my-task-list/my-task-list.component.html
+++ b/src/app/home/task/my-task-list/my-task-list.component.html
@@ -1,5 +1,5 @@
 <p-table [columns]="cols" [value]="data" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
-  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" paginatorPosition="top">
   <ng-template pTemplate="header" let-columns>
     <tr>
       <th *ngFor="let col of columns" [pSortableColumn]="col.field">
@@ -15,7 +15,7 @@
       <td *ngFor="let col of columns">
         {{rowData[col.field]}}
       </td>
-    </tr>
+    </tr>    
   </ng-template>
 </p-table>
 
