--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -55,24 +55,28 @@
             <td>
               <span class="fa fa-file-text-o"></span>
               <span class="file-name-pad">Document 1</span>
+              <span class="Document-view-opt">View</span>
             </td>
           </tr>
           <tr>
             <td>
               <span class="fa fa-file-text-o"></span>
-              <span class="file-name-pad">Document 1</span>
+              <span class="file-name-pad">Document 2</span>
+              <span class="Document-view-opt">View</span>
             </td>
           </tr>
           <tr>
             <td>
               <span class="fa fa-file-text-o"></span>
-              <span class="file-name-pad">Document 1</span>
+              <span class="file-name-pad">Document 3</span>
+              <span class="Document-view-opt">View</span>
             </td>
           </tr>
           <tr>
             <td>
               <span class="fa fa-file-text-o"></span>
-              <span class="file-name-pad">Document 1</span>
+              <span class="file-name-pad">Document 4</span>
+              <span class="Document-view-opt">View</span>
             </td>
           </tr>
         </tbody>
