--- a/src/app/home/dashboard/dashboard.component.scss
+++ b/src/app/home/dashboard/dashboard.component.scss
@@ -85,6 +85,12 @@ table.Report-table {
         display: inline-block;
         padding-left: 10px;
     }
+    .Document-view-opt{
+        color: #007bff;
+        text-decoration: underline;
+        cursor: pointer;
+        float: right;
+    }
 }
   
 .task-content{
