--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,10 +2,14 @@
 <div class="col-md-12 no-pad">
     <div class="main-header">
         WELLS FARGO
-        <span class="fa fa-angle-down down-icon"></span>
-        <span class="login-name">Priyanka Pawar</span>
+        <span class="dropdown" style="float: right;">
+            <a class="dropdown-toggle login-name" (click)="myFunc()">Priyanka Pawar <span class="caret"></span></a>
+            <ul class="dropdown-menu-item" *ngIf="open">
+                <li><a>Sign Out</a></li>
+            </ul>
+        </span>
         <span class="fa fa-user user-icon"></span>
-        <span class="fa fa-question-circle question-icon"></span>  
+        <span class="fa fa-question-circle question-icon"></span>
     </div>
         <div class="content-panel">
         <div class="task-header">Tasks Management</div>
