--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,10 +42,32 @@
     font-weight: bold;
     font-size: 16px;
     float: right;
+    cursor: pointer;
 }
 .down-icon{
     display: inline-block;
     padding-left: 8px;
     margin-top: 5px;
     float: right;
+    cursor: pointer;
 }
+.dropdown-menu-item{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    float: left;
+    min-width: 10rem;
+    padding: 0.5rem 0;
+    padding: 0.5rem 0.5rem;
+    margin: 0.125rem 0 0;
+    font-size: 15px;
+    font-weight: normal;
+    color: #212529;
+    text-align: center;
+    list-style: none;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+}
+  
