scroll bar added to task table

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
         <span class="dropdown" style="float: right;">
             <a class="dropdown-toggle login-name" (click)="myFunc()">Priyanka Pawar <span class="caret"></span></a>
             <ul class="dropdown-menu-item" *ngIf="open">
-                <li><a>Sign Out</a></li>
+                <li><a style="cursor: pointer;">Sign Out</a></li>
             </ul>
         </span>
         <span class="fa fa-user user-icon"></span>
