--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,10 +11,10 @@
         <span class="fa fa-user user-icon"></span>
         <span class="fa fa-question-circle question-icon"></span>
     </div>
-        <div class="content-panel">
+    <div class="content-panel">
         <div class="task-header">Tasks Management</div>
     </div>
 </div>
 <tmt-menu-bar></tmt-menu-bar>
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 <!-- Footer component will be here-->
