--- a/src/app/home/task/task.component.html
+++ b/src/app/home/task/task.component.html
@@ -5,18 +5,18 @@
   <div class="task-table">
     <span>Select Action : </span>
     <span>
-      <p-dropdown [options]="cities2" [(ngModel)]="selectedCity2"></p-dropdown>
+      <p-dropdown [options]="tasks" [(ngModel)]="selectedTask"></p-dropdown>
     </span>
     <span class="task-label-last">over the last : </span>
     <span>
       <p-dropdown [options]="cities3" [(ngModel)]="selectedCity3"></p-dropdown>
     </span>
     <div style="float: right;">
-      <span class="fa fa-download pdf-excel-icon"><span class="pdf-excel-icon">PDF</span></span>
-      <span class="fa fa-download"><span class="pdf-excel-icon">Excel</span></span>
+      <span class="fa fa-download pdf-excel-icon" (click)="exportToPdf()"><span class="pdf-excel-icon">PDF</span></span>
+      <span class="fa fa-download" (click)="exportToExcel()"><span class="pdf-excel-icon">Excel</span></span>
     </div>
     <div style="padding-top: 12px;">
-      <tmt-my-task-list></tmt-my-task-list>
+      <tmt-my-task-list #myTaskList></tmt-my-task-list>
     </div>
   </div>
 </div>
