--- a/src/app/home/task/my-task-list/my-task-list.component.html
+++ b/src/app/home/task/my-task-list/my-task-list.component.html
@@ -1,4 +1,4 @@
-<p-table (exportToPdfEvent)="exportPdf()" #dt [columns]="cols" [value]="data" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
+<p-table #dt [columns]="cols" [value]="data" [paginator]="true" [rows]="10" [showCurrentPageReport]="true"
   currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" paginatorPosition="top">
   <ng-template pTemplate="header" let-columns>
     <tr>
