--- a/src/app/header/menu-bar/menu-bar.component.scss
+++ b/src/app/header/menu-bar/menu-bar.component.scss
@@ -21,6 +21,7 @@
                         }
                         p-menubarsub.ui-submenu{
                             ul.ui-submenu-list{
+                                width: max-content;
                                 li.ui-menuitem{
                                     .ui-menuitem-link{
                                         background-color: #e4ddcb;
@@ -48,6 +49,7 @@
                                 }
                                 p-menubarsub.ui-submenu{
                                     ul.ui-submenu-list{
+                                        width: max-content;
                                         li.ui-menuitem{
                                             .ui-menuitem-link{
                                                 background-color: #e4ddcb;
