--- a/src/app/home/task/task.component.scss
+++ b/src/app/home/task/task.component.scss
@@ -33,6 +33,7 @@
     right: 0;
     top: 20px;
     padding-right: 14px;
+    cursor: pointer;
 }
 
 .pdf-excel-icon{
@@ -40,7 +41,9 @@
     color: #007bff !important;
     padding-right: 10px;
     padding-left: 10px;
+    cursor: pointer;
 }
 .fa.fa-download{
     color: #007bff !important;
+    cursor: pointer;
 }
