account search UI changes

--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -6,10 +6,12 @@
       </div>
       <div class="select-by-main-div">
         <div class="select-by-align">
-          <span>Select By : </span>
-          <span>
-            <p-dropdown [options]="cities4" [(ngModel)]="selectedCity4"></p-dropdown>
-          </span>
+          <div class="select-by-1st-child">
+            <span>Select By : </span>
+            <span>
+              <p-dropdown [options]="cities4" [(ngModel)]="selectedCity4"></p-dropdown>
+            </span>
+          </div>
           <div class="seprator"></div>
           <div class="flex-container">
             <div class="flex-container">
