--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,21 @@
-
+<div class="container">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="container"> 
+            
             <label><b>Username</b></label> 
-            <input type="text" placeholder="Enter Username" name="uname" required> 
+            <input type="text" placeholder="Enter Username" formControlName="username" class="form-control"> 
   
             <label><b>Password</b></label> 
-            <input type="password" placeholder="Enter Password" name="psw" required> 
+            <input type="password" placeholder="Enter Password" formControlName="password" class="form-control"> 
   
             <button type="submit" class="login">Login</button> 
+            <input type="checkbox" checked="checked"> Remember me 
+        
         </div> 
+  
+        <div class="container" style="background-color:#f1f1f1"> 
+            <button type="button" class="cancelbtn">Cancel</button> 
+            <span class="psw">Forgot <a href="#">password?</a></span> 
+        </div> 
+    </form>
+    </div>
